Enable preview features in Chrisliebot since we are now using Java 14 preview stuff